--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -7,6 +7,13 @@
 </head>
 <body>
     <h1>Spaghetti Recipe</h1>
+    <img src="https://www.allrecipes.com/thmb/IqGE_n_mpjKnUzbWLV3nA_PbK70=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/667748_Spaghetti-Sauce-with-Ground-Beef_158140_-Photo-by-Sherri-b9bcc8ba2df44574ba8b4337586dd4aa.jpg" alt="A delicious looking spaghetti">
+    
+    <h2>Classic spaghetti and meat sauce</h2>
+
+    <p>There's nothing like classic spaghetti and meat sauce to bring people together around the dinner table. This homemade spaghetti sauce with ground beef recipe will satisfy all your comfort food cravings.</p>
+    <p>Restaurant-worthy spaghetti sauce with ground beef is just a few steps away.</p>
+
     <a href="../index.html">Home</a>
 </body>
 </html>
