--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -6,14 +6,39 @@
     <title>Spaghetti Recipe</title>
 </head>
 <body>
+    <a href="../index.html">Home</a>
+
     <h1>Spaghetti Recipe</h1>
     <img src="https://www.allrecipes.com/thmb/IqGE_n_mpjKnUzbWLV3nA_PbK70=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/667748_Spaghetti-Sauce-with-Ground-Beef_158140_-Photo-by-Sherri-b9bcc8ba2df44574ba8b4337586dd4aa.jpg" alt="A delicious looking spaghetti">
     
-    <h2>Classic spaghetti and meat sauce</h2>
+    <h2>Classic Spaghetti and Meat Sauce</h2>
 
     <p>There's nothing like classic spaghetti and meat sauce to bring people together around the dinner table. This homemade spaghetti sauce with ground beef recipe will satisfy all your comfort food cravings.</p>
     <p>Restaurant-worthy spaghetti sauce with ground beef is just a few steps away.</p>
 
-    <a href="../index.html">Home</a>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>Ground Beef (1 pound)</li>
+        <li>4 cloves of Garlic (minced)</li>
+        <li>1 medium-sized Onion (chopped)</li>
+        <li>1 small Green Pepper (diced)</li>
+        <li>Can of Diced Tomatoes (28 ounces)</li>
+        <li>Can of Tomato Paste (6 ounces)</li>
+        <li>Dried Oregano (2 teaspoons)</li>
+        <li>Dried Basil (2 teaspoons)</li>
+        <li>Salt (1 teaspoon)</li>
+        <li>Ground Black Pepper (1 teaspoon)</li>
+    </ul>
+
+    <h3>Steps</h3>
+
+    <ol>
+        <li>Gather all ingredients.</li>
+        <li>Combine ground beef, onion, garlic, and green pepper in a large saucepan over medium-high heat. Cook and stir until meat is browned and crumbly and vegetables are tender, 5 to 7 minutes. Drain grease.</li>
+        <li>Stir diced tomatoes, tomato sauce, and tomato paste into the pan. Season with oregano, basil, salt, and pepper. Simmer spaghetti sauce for 1 hour, stirring occasionally.</li>
+        <li>Serve hot and enjoy!</li>
+    </ol>
+
+    
 </body>
 </html>
