--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 
 <body>
     <h1>Oden Recipes</h1>
-    <a href="recipes/spaghetti.html">Homemade Spaghetti</a>
+    <ul>
+        <li><a href="recipes/spaghetti.html">Homemade Spaghetti</a></li>
+        <li><a href="recipes/thai-pb-ramen.html">Thai Peanut Butter Ramen</a></li>
+        <li></li>
+    </ul>
 </body>
 
 </html>
