Create third recipe page
Add reuben.html with identical page structure to spaghetti.html.

Add a link to reuben.html from index.html.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <ul>
         <li><a href="recipes/spaghetti.html">Homemade Spaghetti</a></li>
         <li><a href="recipes/thai-pb-ramen.html">Thai Peanut Butter Ramen</a></li>
-        <li></li>
+        <li><a href="recipes/reuben.html">Reuben Sandwich</a></li>
     </ul>
 </body>
 
