--- a/index.html
+++ b/index.html
@@ -4,16 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Odin Recipes</title>
 </head>
 
 <body>
-    <h1>Oden Recipes</h1>
-    <ul>
+    <h1>Odin Recipes</h1>
+
+    <!-- retaining for ul/li example usage -->
+    <!-- <ul>
         <li><a href="recipes/spaghetti.html">Homemade Spaghetti</a></li>
         <li><a href="recipes/thai-pb-ramen.html">Thai Peanut Butter Ramen</a></li>
         <li><a href="recipes/reuben.html">Reuben Sandwich</a></li>
-    </ul>
+    </ul> -->
+
+    <a href="recipes/spaghetti.html">Homemade Spaghetti</a></li>
+    <a href="recipes/thai-pb-ramen.html">Thai Peanut Butter Ramen</a></li>
+    <a href="recipes/reuben.html">Reuben Sandwich</a></li>
+
 </body>
 
 </html>
