Enhance index.html styling
Incorporate box-model lessons into index.html.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Odin Recipes</title>
 </head>
 
-<body>
+<body class="home-body">
     <h1>Odin Recipes</h1>
 
     <!-- retaining for ul/li example usage -->
@@ -18,9 +18,9 @@
         <li><a href="recipes/reuben.html">Reuben Sandwich</a></li>
     </ul> -->
 
-    <a href="recipes/spaghetti.html">Homemade Spaghetti</a></li>
-    <a href="recipes/thai-pb-ramen.html">Thai Peanut Butter Ramen</a></li>
-    <a href="recipes/reuben.html">Reuben Sandwich</a></li>
+    <a class="home-link" href="recipes/spaghetti.html">Homemade Spaghetti</a></li>
+    <a class="home-link" href="recipes/thai-pb-ramen.html">Thai Peanut Butter Ramen</a></li>
+    <a class="home-link" href="recipes/reuben.html">Reuben Sandwich</a></li>
 
 </body>
 
